[gd_scene load_steps=7 format=3 uid="uid://lqoe8enm5qn4"]

[ext_resource type="Script" uid="uid://b2dn3id1pklsq" path="res://scripts/levels/phase-1.gd" id="1_snng0"]
[ext_resource type="Texture2D" uid="uid://y2kswq7sr1bv" path="res://assets/images/levels-images/japan-level/backgorung-japa.png" id="2_ba6g4"]
[ext_resource type="PackedScene" uid="uid://nmr1xhofiy4k" path="res://scenes/levels/portal.tscn" id="3_ehuar"]
[ext_resource type="PackedScene" uid="uid://dynvl05j4mu1b" path="res://scenes/characters/player.tscn" id="4_5pg0e"]
[ext_resource type="PackedScene" uid="uid://c151v0x2qmj3t" path="res://scenes/characters/player_2.tscn" id="5_mwq25"]
[ext_resource type="PackedScene" uid="uid://343gqdvniw4e" path="res://scenes/levels/obstaculos.tscn" id="6_s2hio"]

[node name="phase-1" type="Node"]
script = ExtResource("1_snng0")

[node name="japao" type="Sprite2D" parent="."]
position = Vector2(637.6302, 353)
scale = Vector2(0.79671216, 0.8039637)
texture = ExtResource("2_ba6g4")

[node name="Portal" parent="." instance=ExtResource("3_ehuar")]
position = Vector2(625, 119)
collision_layer = 2
collision_mask = 4

[node name="player" parent="." instance=ExtResource("4_5pg0e")]
position = Vector2(498, 651)
collision_layer = 4
collision_mask = 2

[node name="player2" parent="." instance=ExtResource("5_mwq25")]
position = Vector2(551, 638)
collision_layer = 4
collision_mask = 2

[node name="Obstaculos" parent="." instance=ExtResource("6_s2hio")]
visible = false
position = Vector2(-103, 214)

[node name="Obstaculos2" parent="." instance=ExtResource("6_s2hio")]
visible = false
position = Vector2(-109, 355)

[node name="Obstaculos3" parent="." instance=ExtResource("6_s2hio")]
visible = false
position = Vector2(-99, 497)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.085

[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
